--- a/index.html
+++ b/index.html
@@ -16,36 +16,38 @@
           <a href="research.html">Research</a>
           <a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">Publications</a>
       </h1>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/carousel_01.jpg" class="d-block w-100" alt="Photo of Helen">
-          </div>
-          <div class="carousel-item">
-            <img src="images/carousel_02.jpg" class="d-block w-100" alt="Photo of diver">
-          </div>
-          <div class="carousel-item">
-            <img src="images/carousel_03.jpg" class="d-block w-100" alt="Helen coding at her desk">
-          </div>
-          <div class="carousel-item">
-            <img src="images/carousel_04.jpg" class="d-block w-100" alt="Helen coding at her desk">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="300-px-wide">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/carousel_01.jpg" class="d-block w-100" alt="Photo of Helen">
+              </div>
+              <div class="carousel-item">
+                <img src="images/carousel_02.jpg" class="d-block w-100" alt="Photo of diver">
+              </div>
+              <div class="carousel-item">
+                <img src="images/carousel_03.jpg" class="d-block w-100" alt="Helen coding at her desk">
+              </div>
+              <div class="carousel-item">
+                <img src="images/carousel_04.jpg" class="d-block w-100" alt="Helen coding at her desk">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
       </div>
+        </div
       <br>
       <p>Last Updated: July 27, 2020</p>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
