--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             Helen Scott
         </title>
+        <link href='https://fonts.googleapis.com/css?family=Spartan' rel='stylesheet'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles.css">
     </head>
