--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body>
       <img src='images/logo.png' alt="Helen's logo" class="logo">
       <h1 class="running-header">
-          <a href="about.html">About</a>
-          <a href="research.html">Research</a>
-          <a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">Publications</a>
+          <a href="about.html">ABOUT</a>
+          <a href="research.html">RESEARCH</a>
+          <a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">PUBLICATIONS</a>
       </h1>
         <div class="300-px-wide">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
