--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <!--I got a lot of the css code for this paned layout from https://github.com/SmithEcophysLab/SmithEcophysLab.github.io -->
+        <!--I got a lot of the css code for this panel layout from https://github.com/SmithEcophysLab/SmithEcophysLab.github.io -->
         <div class="wrapper">
         <header>
             <a href="index.html"><img src="images/logo-face.png" alt="Headshot of Helen"></a>
@@ -23,15 +23,8 @@
             <div align="center">
                 <h2>About Me</h2>
             </div>
-            <br>
-            <p>
-                I am a computational biologist and climate scientist.
-                I am interested in how microorganisms, like bacteria, shape our climate, and how they are changing in response to climate change.
-            </p>
-            <br>
-            <p>
-                Check out my <a href="research.html">Research</a> page to learn more about what I do!
-            </p>
+            <img src="images/timeline v1.png" alt="Timeline">
+            Learn more about my past research experiences in my <a>CV</a>
         </section>
     </body>
 </html>
