Add better research descriptions

--- a/research.html
+++ b/research.html
@@ -21,6 +21,19 @@
         <section>
             <div align="center">
                 <h2>Research</h2>
+                <h3>Microbial Communities</h3>
+                <p> I currently am the Principal Investigator for an internally funded effort at BBN to study microbial ecosystems. 
+                    In the project, I have developed mathematical models to simulate the metabolism and growth of microbial communities, both to predict how natural communities may respond to environmental conditions, and with the long term goal of using the models to optimize designs of synthetic communities used in biomanufacturing. 
+                    The project has focused models of biofilms, and the development of robust models of extremophilic communities in addition to model organisms. </p>
+                <h3>Calibrated Flow Cytometry</h3>
+                <p>Since joining BBN, I have been involved in the development and use of the Tool-chain to Accelerate Synthetic Biology Engineering (TASBE) which focuses on the calibration and standardization of laboratory measurements to assist in modeling and quantitative analysis.
+                    My work with TASBE has focused on tools for calibrated flow cytometry. Flow cytometry is a powerful method for high-throughput precision measurement of cell fluorescence and size. 
+                    Effective use of this tool for quantification of synthetic biology devices and circuits, however, generally requires careful application of complex multistage workflows for calibration, filtering, and analysis with appropriate statistics. 
+                    The TASBE Flow Analytics package provides a free, open, and accessible implementation of such workflows in a form designed for high-throughput analysis of large synthetic biology data sets. 
+                    With experimental samples and controls, we use TASBE to generate calibrated data, quantitative analyses and comparisons. Most recently we have used TASBE to characterize promoters in plant cells.</p>
+                <h3>Modeling Photosynthesis</h3>
+                <p>As a graduate student, I was focused on understanding how plants adjust physiologically to environmental changes. I used simple mathematical models to develop a theory of physiological acclimation to environmental change for plants that use the C4 photosynthetic pathway.
+                    I have used these models to better represent the carbon cycle in Earth System Models, and to predict competition between plants that use the C3 pathway versus those that use the C4 pathway in the future.</p>
             </div>
         </section>
     </body>
