Add activism page

--- a/activism.html
+++ b/activism.html
@@ -21,22 +21,13 @@
 
         <section>
             <div align="center">
-                <h2>Theoretical Model of Photosynthetic Acclimation</h2>
-            </div>
-            <label for="graphs">Select a graph:</label>
-            <select>
-              <option value="images/res1.png" selected>Phtosynthesis</option>
-              <option value="images/res2.png">Ci:Ca ratio</option>
-              <option value="images/res3.png">Enzymatic Rates</option>
-            </select>
-            <div id="result">
-                <img src='images/res1.png' alt="Result Graph">
+                <h2>Activism</h2>
+                <h3>Sunrise Boston</h3>
+                <p>I am an active member of the Boston hub of the Sunrise
+                    Movement. If you are interested in joining me in the Boston
+                    hub, please fill out this <a href="bit.ly/sunbossundays">form</a>.
+                </p>
             </div>
         </section>
-        <script>
-            document.querySelector('select').onchange = function() {
-                document.querySelector('#result').innerHTML = '<img src=' + this.value + ' alt="Result Graph">';
-            }
-        </script>
     </body>
 </html>
