--- a/research.html
+++ b/research.html
@@ -15,6 +15,7 @@
             <a href="index.html"><img src="images/logo-face.png" alt="Headshot of Helen"></a>
             <h3 class="view"><a href="about.html">About</a></h3>
             <h3 class="view"><a href="research.html">Research</a></h3>
+            <h3 class="view"><a href="activism.html">Activism</a></h3>
             <h3 class="view"><a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">Publications</a></h3>
         </header>
 
