--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h1 class="running-header">
           <a href="about.html">ABOUT</a>
           <a href="research.html">RESEARCH</a>
+          <h3 class="view"><a href="activism.html">ACTIVISM</a></h3>
           <a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">PUBLICATIONS</a>
       </h1>
         <div class="300-px-wide">
