--- a/activism.html
+++ b/activism.html
@@ -25,7 +25,7 @@
                 <h3>Sunrise Boston</h3>
                 <p>I am an active member of the Boston hub of the Sunrise
                     Movement. If you are interested in joining me in the Boston
-                    hub, please fill out this <a href="bit.ly/sunbossundays">form</a>.
+                    hub, please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSer-xWArOvxC51SaSgHMU8kZI9RKqa-kfSd_-ZpaVlomfsexw/viewform">form</a>.
                 </p>
             </div>
         </section>
