--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="running-header">
           <a href="about.html">ABOUT</a>
           <a href="research.html">RESEARCH</a>
-          <h3 class="view"><a href="activism.html">ACTIVISM</a></h3>
+          <a href="activism.html">ACTIVISM</a>
           <a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">PUBLICATIONS</a>
       </h1>
         <div class="300-px-wide">
@@ -31,13 +31,13 @@
                 <img src="images/carousel_01.jpg" class="d-block w-100" alt="Photo of Helen">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_02.jpg" class="d-block w-100" alt="Photo of diver">
+                <img src="images/carousel_02.jpg" class="d-block w-100" alt="Photo of Helen in Bryce Canyon">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_03.jpg" class="d-block w-100" alt="Helen coding at her desk">
+                <img src="images/carousel_03.jpg" class="d-block w-100" alt="Photo of Helen coding at her desk">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_04.jpg" class="d-block w-100" alt="Helen coding at her desk">
+                <img src="images/carousel_04.jpg" class="d-block w-100" alt="Photo of Helen and a baby chick">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -51,7 +51,7 @@
       </div>
         </div
       <br>
-      <p>Last Updated: July 27, 2020</p>
+      <p>Last Updated: May 17, 2021</p>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
