clean up, add slides

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="running-header">
           <a href="about.html">ABOUT</a>
           <a href="research.html">RESEARCH</a>
-          <a href="activism.html">ACTIVISM</a>
+          <a href="media.html">MEDIA</a>
           <a href="https://scholar.google.com/citations?user=XLP1QBAAAAAJ&hl=en">PUBLICATIONS</a>
       </h1>
         <div class="300-px-wide">
@@ -51,7 +51,7 @@
       </div>
         </div
       <br>
-      <p>Last Updated: May 17, 2021</p>
+      <p>Last Updated: March 7, 2022</p>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
