--- a/media.html
+++ b/media.html
@@ -10,7 +10,6 @@
     </head>
 
     <body>
-        <!--I got a lot of the css code for this panel layout from https://github.com/SmithEcophysLab/SmithEcophysLab.github.io -->
         <div class="wrapper">
         <header>
             <a href="index.html"><img src="images/logo-face.png" alt="Headshot of Helen"></a>
@@ -22,10 +21,14 @@
 
         <section>
             <div align="center">
-                <h2>About Me</h2>
+                <h2>Slides</h2>
+                You can see the slides for all of the public presentations I 
+                have given in <a href="https://drive.google.com/drive/folders/15bab9wtIucwuKfix5n83oJDkhvrf95qj?usp=sharing">this google drive folder.</a>.
+                <hr>
+                <h2>Videos</h2>
+                Videos of my public presentations will be added here when
+                available.
             </div>
-            <img src="images/timeline v1.png" alt="Timeline">
-            Learn more about my past research experiences in my <a>CV</a>
         </section>
     </body>
 </html>
