Use updated timeline image

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <div align="center">
                 <h2>About Me</h2>
             </div>
-            <img src="images/timeline v1.png" alt="Timeline">
+            <img src="images/timeline.png" alt="Timeline">
             Learn more about my past research experiences in my <a>CV</a>
         </section>
     </body>
