Use correct image file extensions

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/carousel_01.jpg" class="d-block w-100" alt="Photo of Helen">
+                <img src="images/carousel_01.png" class="d-block w-100" alt="Photo of Helen">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_02.jpg" class="d-block w-100" alt="Photo of Helen in Bryce Canyon">
+                <img src="images/carousel_02.png" class="d-block w-100" alt="Photo of Helen in Bryce Canyon">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_03.jpg" class="d-block w-100" alt="Photo of Helen coding at her desk">
+                <img src="images/carousel_03.png" class="d-block w-100" alt="Photo of Helen coding at her desk">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_04.jpg" class="d-block w-100" alt="Photo of Helen and a baby chick">
+                <img src="images/carousel_04.png" class="d-block w-100" alt="Photo of Helen and a baby chick">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
