--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/carousel_01.png" class="d-block w-100" alt="Photo of Helen">
+                <img src="images/carousel_01.png" class="d-block w-100" alt="Photo of Helen. Caption: Hi, I'm Helen.">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_02.png" class="d-block w-100" alt="Photo of Helen in Bryce Canyon">
+                <img src="images/carousel_02.png" class="d-block w-100" alt="Helen in front of R/V Atlantic Explorer. Caption: I study the invisible marine microbes that shape our oceans' future.">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_03.png" class="d-block w-100" alt="Photo of Helen coding at her desk">
+                <img src="images/carousel_03.png" class="d-block w-100" alt="Helen holding a baby chick. Caption: I'm on a mission to understand life on the smallest scale,">
               </div>
               <div class="carousel-item">
-                <img src="images/carousel_04.png" class="d-block w-100" alt="Photo of Helen and a baby chick">
+                <img src="images/carousel_04.png" class="d-block w-100" alt="Helen in Bryce Canyon. Caption: Because it matters at the largest.">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
